Created glue templates for IFoo widgets

--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-bool-checkbox-3.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-bool-checkbox-3.html
@@ -5,7 +5,7 @@
         <input type="checkbox" name="{{ qname }}" id="input-{{ qname }}" value="{{ qname }}"
             class="{{ input_classes | list | join(" ") }}"
             {% if value %}checked="checked"{% endif -%}
-            {{ markup_helpers.attributes(attrs) -}} />
+            {{ attrs | xmlattr }} />
          <span>{{ description }}</span>
      </label>
 </div>
