--- a/ckanext/publicamundi/templates/package/snippets/objects/glue-read.html
+++ b/ckanext/publicamundi/templates/package/snippets/objects/glue-read.html
@@ -1,6 +1,7 @@
 <div class="{{ " " ~ classes | join(' ') }}">
     <h3>{{ title }}</h3>
-    {% for f in fields -%}
+    {% for k, f in fields.items() -%}
+    <hr/>
     {{ f.markup }}
     {% endfor -%}
 </div>
