--- a/ckanext/publicamundi/templates/tests/form.html
+++ b/ckanext/publicamundi/templates/tests/form.html
@@ -11,7 +11,7 @@
 
 {% block primary_content_inner %}
 <form method="post" class="{{ c.form_class }}">
-    {{ c.form }}
+    {{ c.form_markup }}
     <input type="submit" name="submit" />
 </form>
 {% endblock %}
