--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-float-text.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-float-text.html
@@ -15,7 +15,7 @@
             value="{{ value | float(default=field.default) }}"
             data-min="{{ field.min }}" data-max="{{ field.max }}"
             placeholder="{{ placeholder | empty_and_escape }}"
-            {{ markup_helpers.attributes(attrs) -}}
+            {{ attrs | xmlattr -}}
         />
         {% if error and error is iterable -%}
         <span class="error-block">{{ error | join(', ') }}</span>
