--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-password.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-password.html
@@ -11,7 +11,7 @@
         <input type="password" id="{{ 'input-' ~ qname }}"  name="{{ qname }}"
             class="{{ input_classes | list | join(" ") }}"
             data-check="#{{ 'input-' ~ qname ~ '-1' }}"
-            {{ markup_helpers.attributes(attrs) -}}
+            {{ attrs | xmlattr -}}
         />
         <input type="password" id="{{ 'input-' ~ qname ~ '-1' }}"  name="{{ qname ~ '-1' }}"
             class="{{ input_classes | list | join(" ") }}"
