--- a/ckanext/publicamundi/templates/package/snippets/fields/read-object.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/read-object.html
@@ -1,6 +1,6 @@
 {% import 'macros/markup_helpers.html' as markup_helpers -%}
 
-<div class="{{ classes | join(' ') }}" {{ markup_helpers.attributes(attrs) }} >
+<div class="{{ classes | join(' ') }}" {{ attrs | xmlattr }} >
     <h3 class="title">{{ title }}</h3>
     {% if description %}<div class="description">{{ description }}</div>{% endif -%}
     <div>
