--- a/ckanext/publicamundi/templates/snippets/accordion.html
+++ b/ckanext/publicamundi/templates/snippets/accordion.html
@@ -1,14 +1,14 @@
 <div class="accordion" id="{{ id }}">
     {% for section in sections -%}
-    {% with section_id = id ~ '-section-' ~ loop.index %}
+    {% with section_id=id ~ '-section-' ~ loop.index, heading=section.heading, body=section.body %}
     <div class="accordion-group">
         <div class="accordion-heading">
             <a class="accordion-toggle" data-toggle="collapse" data-parent="#{{ id }}" href="#{{ section_id }}"
-                >{{ section.heading }}</a>
+                >{% if heading is callable %}{{ heading() }}{% else %}{{ heading }}{% endif %}</a>
         </div>
         <div id="{{ section_id }}" class="accordion-body collapse {% if loop.first %}in{% endif %}">
             <div class="accordion-inner">
-                {{ section.body }}
+                {% if body is callable %}{{ body() }}{% else %}{{ body }}{% endif %}
             </div>
         </div>
     </div>
