--- a/ckanext/publicamundi/templates/tests/accordion-form.html
+++ b/ckanext/publicamundi/templates/tests/accordion-form.html
@@ -1,16 +1,8 @@
-{% extends 'page.html' %}
-
-{% block scripts %}
-{{ super() }}
-<style>
-    /*form > h3, form > h4 { margin-top: 20px; color: #777} */
-</style>
-{% resource 'ckanext-publicamundi/styles' %}
-{% endblock %}
+{% extends 'tests/base.html' %}
 
 {% block primary_content_inner %}
 <form method="post" class="{{ c.form_class }}">
-    {% snippet 'snippets/accordion.html', id='accordion-1', sections=c.form_sections %}
+    {% snippet 'snippets/accordion.html', id='form1', sections=c.form_sections %}
     <input type="submit" name="submit" />
 </form>
 {% endblock %}
