--- a/ckanext/publicamundi/templates/tests/form.html
+++ b/ckanext/publicamundi/templates/tests/form.html
@@ -1,19 +1,23 @@
-{% extends 'page.html' %}
+{% extends 'tests/base.html' %}
 
 {% block scripts %}
+
 {{ super() }}
+
 <style>
     form > h3 { margin-top: 20px; color: #777}
     form > h3 > code { font-size: inherit }
 </style>
-{% resource 'ckanext-publicamundi/styles' %}
+
 {% endblock %}
 
 {% block primary_content_inner %}
+
 <form method="post" class="{{ c.form_class }}">
     {{ c.form_markup }}
     <input type="submit" name="submit" />
 </form>
+
 {% endblock %}
 
 
