--- a/ckanext/publicamundi/templates/package/snippets/fields/read-datetime.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/read-datetime.html
@@ -1,4 +1,4 @@
 <div class="{{ classes | join(' ') }}">
     <dt>{{ title }}</dt>
-    <dd>{{ value.isoformat() }}</dd>
+    <dd>{{ value.isoformat() if value else _('n/a') }}</dd>
 </div>
