--- a/ckanext/publicamundi/templates/package/snippets/objects/edit-contact_info.html
+++ b/ckanext/publicamundi/templates/package/snippets/objects/edit-contact_info.html
@@ -4,6 +4,12 @@
     <h3>
         {% if required %}<span title="{{ _("This field is required") }}" class="control-required">*</span>{% endif %}{{ title -}}
     </h3>
-    {{ h.markup_for_field('edit', obj.get_field('email'), qname, { 'title': _('Email') }) }}
-    {{ h.markup_for_field('edit:compact', obj.get_field('address'), qname, { 'title': _('Postal Address') }) }}
+    {{ h.markup_for_field('edit', obj.get_field('email'), 
+        name_prefix = qname, 
+        data = { 'title': _('Email') }) 
+    -}}
+    {{ h.markup_for_field('edit:compact', obj.get_field('address'), 
+        name_prefix = qname, 
+        data = { 'title': _('Postal Address') }) 
+    -}}
 </div>
