--- a/ckanext/publicamundi/public/css/main.css
+++ b/ckanext/publicamundi/public/css/main.css
@@ -19,6 +19,26 @@ input[type="tel"] {
     border-radius: 1px;
 }
 
+.alert {
+    border-radius: 1px;
+}
+
+.error-block {
+    border-radius: 1px;
+    margin: 3px 0px;
+    padding: 5px 15px;
+    width: inherit;
+}
+
+.error-block > ul {
+    margin: 5px 0px; 
+}
+
+.control-group > .alert-error {
+    margin: 3px 0px;
+    font-size: 12px;
+}
+
 .select2-container-multi .select2-choices {
     border-radius: 1px;
 }
