--- a/ckanext/publicamundi/templates/macros/markup_helpers.html
+++ b/ckanext/publicamundi/templates/macros/markup_helpers.html
@@ -1,11 +1,19 @@
-{%- macro attributes(attrs={}) -%}
-  {%- for key, value in attrs.items() -%}
-  {{ " " }}{{ key }}{% if value != "" %}="{{ value }}"{% endif %}
-  {%- endfor -%}
-{%- endmacro -%}
 
 {%- macro mark_required(required, msg=None) -%}
   {% if required -%}
   <span title="{{ msg or _("This field is required") }}" class="control-required">*</span>
   {% endif -%}
 {%- endmacro -%}
+
+{%- macro error_messages(errors) -%}
+{% if errors -%}
+<div class="alert alert-error">
+    <ul>
+        {% for msg in errors -%}
+        <li>{{ msg }}</li>
+        {% endfor -%}
+    </ul>
+</div>
+{% endif -%}
+{%- endmacro -%}
+
