--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-bool-checkbox-2.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-bool-checkbox-2.html
@@ -1,6 +1,6 @@
 {% import 'macros/markup_helpers.html' as markup_helpers -%}
 
-<div class="control-group{{ " error" if error }}{{ " " ~ classes | join(' ') }}">
+<div class="control-group{{ " error" if errors }}{{ " " ~ classes | join(' ') }}">
     <div class="controls">
         <label class="checkbox">
             <input type="checkbox" name="{{ qname }}" id="input-{{ qname }}" value="{{ qname }}"
