--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-bool-checkbox-3.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-bool-checkbox-3.html
@@ -1,6 +1,6 @@
 {% import 'macros/markup_helpers.html' as markup_helpers -%}
 
-<div class="{{ "error" if error }}{{ " " ~ classes | join(' ') }}">
+<div class="{{ "error" if errors }}{{ " " ~ classes | join(' ') }}">
     <label class="checkbox">
         <input type="checkbox" name="{{ qname }}" id="input-{{ qname }}" value="{{ qname }}"
             class="{{ input_classes | list | join(" ") }}"
