--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-password.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-password.html
@@ -1,9 +1,8 @@
 {% import 'macros/markup_helpers.html' as markup_helpers -%}
 
 {% if input_classes is not defined %}{% set input_classes = [ 'input-medium' ] %}{% endif -%}
-{% set error = None -%}
 
-<div class="control-group{{ " error" if error }}{{ " " ~ classes | join(' ') }}">
+<div class="control-group{{ " error" if errors }}{{ " " ~ classes | join(' ') }}">
     <label class="control-label" for="{{ 'input-' ~ qname }}">
         {{ title }}{{ markup_helpers.mark_required(required) }}
     </label>
@@ -16,8 +15,8 @@
         <input type="password" id="{{ 'input-' ~ qname ~ '-1' }}"  name="{{ qname ~ '-1' }}"
             class="{{ input_classes | list | join(" ") }}"
         />
-        {% if error and error is iterable -%}
-        <span class="error-block">{{ error | join(', ') }}</span>
+        {% if errors -%}
+        <span class="help-inline">{{ errors | join(', ') }}</span>
         {% endif -%}
     </div>
 </div>
