--- a/ckanext/publicamundi/templates/package/snippets/objects/edit-point.html
+++ b/ckanext/publicamundi/templates/package/snippets/objects/edit-point.html
@@ -1,8 +1,7 @@
 {% if input_classes is not defined %}{% set input_classes = [ 'input-small' ] -%}{% endif -%}
-{% set error = None -%}
 {% set placeholder = '0.0' -%}
 
-<div class="control-group{{ " error" if error }}{{ " " ~ classes | join(' ') }}">
+<div class="control-group{{ " error" if errors }}{{ " " ~ classes | join(' ') }}">
     <label class="control-label">
         {{ title }}
         {% if required %}<span title="{{ _("This field is required") }}" class="control-required">*</span>{% endif -%}
@@ -24,8 +23,9 @@
             value="{{ obj.y | empty_and_escape }}" 
             placeholder="{{ placeholder }}"  
         />
-        {% if error and error is iterable %}
-        <span class="error-block">{{ error | join(', ') }}</span>
-        {% endif %}
-    </div>
+    </div>        
+    
+    {% if errors -%}
+    <span class="help">{{ errors | join(', ') }}</span>
+    {% endif -%}
 </div>
