--- a/ckanext/publicamundi/templates/package/snippets/objects/glue-edit.html
+++ b/ckanext/publicamundi/templates/package/snippets/objects/glue-edit.html
@@ -1,7 +1,10 @@
-{% set error = None -%}
+{% import 'macros/markup_helpers.html' as markup_helpers -%}
 
 <div class="{{ " " ~ classes | join(' ') }}">
     <h3>{{ title }}</h3>
+
+    {{ markup_helpers.error_messages(errors[errors.global_key]) }} 
+
     {% for k, f in fields.items() -%}
     <hr/>
     {{ f.markup }}
