--- a/ckanext/publicamundi/templates/package/snippets/objects/edit-postal_address-comfortable.html
+++ b/ckanext/publicamundi/templates/package/snippets/objects/edit-postal_address-comfortable.html
@@ -1,12 +1,11 @@
+{% import 'macros/markup_helpers.html' as markup_helpers -%}
 
-<div class="{{ " error" if errors }}{{ " " ~ classes | join(' ') }}">
+<div class="{{ " error" if (errors and errors.global_key in errors) }}{{ " " ~ classes | join(' ') }}">
  
-    <h3>
-        {% if required %}<span title="{{ _("This field is required") }}" class="control-required">*</span>{% endif -%}
-        {{ title }}
-    </h3>
-
-    <div class="control-group">
+    <h3>{{ title }}{{ markup_helpers.mark_required(required) }}</h3>
+ 
+    {% with e = errors['address'] -%}
+    <div class="control-group {{ 'error' if e }}">
         <label class="control-label" for="input-{{ qname }}.address">{{ _('Street Address') }}</label>
         <div class="controls">
             <input type="text" id="input-{{ qname }}.address"  name="{{ qname }}.address"
@@ -15,10 +14,13 @@
                 placeholder="{{ _('Patission 183') }}"
                 title="{{ _('Street Address') }}"
             />
+            {% if e -%}<span class="help-inline">{{ e|join(', ') }}</span>{% endif -%}
         </div>
     </div>
+    {% endwith -%}
 
-    <div class="control-group">
+    {% with e = errors['postalcode'] -%}
+    <div class="control-group {{ 'error' if e }}">
         <label class="control-label" for="input-{{ qname }}.postalcode">{{ _('Postal Code') }}</label>
         </label>
         <div class="controls">
@@ -28,12 +30,14 @@
                 placeholder="{{ _('13254') }}" 
                 title="{{ _('Postal (ZIP) Code') }}" 
             />
+            {% if e -%}<span class="help-inline">{{ e|join(', ') }}</span>{% endif -%}
         </div>
     </div>
+    {% endwith -%}
     
-    {% if errors %}
-    <span class="help">{{ errors | join(', ') }}</span>
-    {% endif %}
+    {{ 
+        markup_helpers.error_messages(errors[errors.global_key]) 
+    }} 
 
 </div>
 
