--- a/ckanext/publicamundi/templates/tests/test.html
+++ b/ckanext/publicamundi/templates/tests/test.html
@@ -1,9 +1,4 @@
-
-{%- macro mark_required(required, msg=None) -%}
-    {% if required -%}
-    <span title="{{ msg or _("This field is required") }}" class="control-required">*</span>
-   {% endif -%}
-{%- endmacro -%}
+{% extends 'tests/base.html' %}
 
 {%- macro markup_for_messages(messages, key=None, titles={}) -%}
     {% if messages -%}
@@ -40,3 +35,36 @@
     {% endif -%}
 {% endmacro -%}
 
+{% block primary_content_inner %}
+
+{% set 
+   errors1 = [ 
+       'Hello World',
+       'Goodbye World',
+   ] 
+%}
+
+{% set 
+   errors2 = {
+       'foo': {
+          'baz1': ['A Baz-1 error'],
+          'baz2': ['A Baz-2 error', 'Another Baz-2 error'],
+       },
+       'start': ['The date is malformed'],
+       'end': ['The date is out of range'],
+       '__after': ['Something bad'], 
+   }  
+%}
+
+{% set titles = { 'foo': 'Foo', 'start': 'Start Date', '__after': 'As a whole' } %}
+
+{{ error_messages(errors1, titles) }}
+
+{{ error_messages(errors2, titles) }}
+
+{% set errors3 = errors2['start'] + errors2['end'] + errors1 %}
+{{ error_messages(errors3, titles) }}
+
+{{ error_messages([]) }}
+
+{% endblock %}
