--- a/ckanext/publicamundi/templates/package/snippets/package_basic_fields.html
+++ b/ckanext/publicamundi/templates/package/snippets/package_basic_fields.html
@@ -1,51 +1,146 @@
-{% ckan_extends %}
+{% import 'macros/form.html' as form %}
 
-{#
+{% set is_new = data.get('id') is none %}
+{% set is_draft = data.get('state', 'draft') == 'draft' %}
 
-Add widgets for our basic extension-specific fields
+{% block package_basic_fields_title %}
+  
+{{ 
+    form.input('title', 
+        id = 'field-title', 
+        label = _('Title'), 
+        placeholder = _('eg. A descriptive title'), 
+        value = data.title, 
+        error = errors.title, 
+        classes = ['control-full', 'control-medium'], 
+        attrs = { 'data-module': 'slug-preview-target' }
+    ) 
+}}
 
-#}
+{% endblock %} {# package_basic_fields_title #}
 
-{% block package_basic_fields_custom %}
- 
-  {#
-  {{ form.input('baz', 
-        label=_('Baz'), id='field-baz', 
-        placeholder=_('a wonderfull thing'), 
-        value=data.get('baz'), 
-        error=errors.get('baz'), 
-        classes=['control-medium']) 
-  }}
-  #}
+{% block package_basic_fields_url %}
+  
+{% set prefix = h.url_for(controller='package', action='read', id='') %}
+{% set domain = h.url_for(controller='package', action='read', id='', qualified=true) %}
+{% set domain = domain|replace("http://", "")|replace("https://", "") %}
+{% set attrs = {'data-module': 'slug-preview-slug', 'data-module-prefix': domain, 'data-module-placeholder': '<dataset>'} %}
+
+{{ 
+    form.prepend('name', 
+        id = 'field-name', 
+        label = _('URL'), 
+        prepend = prefix, 
+        placeholder = _('eg. my-dataset'), 
+        value = data.name, 
+        error = errors.name, 
+        attrs = attrs, 
+        is_required = true
+    ) 
+}}
+
+{% endblock %} {# package_basic_fields_url #}
+
+{% block package_basic_fields_dataset_type %}
+
+{% if is_new %}
+{{ 
+    form.select('dataset_type', 
+        label = _('Dataset Type'),
+        options = h.dataset_type_options(), 
+        selected = 'ckan', 
+        attrs = { 
+            'data-module': 'input-select2',
+        }
+    ) 
+}}
+{% else %}
+{% set dataset_type = data.get('dataset_type') %}
+{{ form.hidden('dataset_type', dataset_type) }} 
+<div class="control-group ">
+    <label class="control-label">{{ _('Dataset Type') }}</label>
+    <div class="controls "><div class="display">{{ h.dataset_types().get(dataset_type).get('title') }}</div></div>
+</div>
+
+{% endif %}
+
+{% endblock %} {# package_basic_fields_dataset_type #}
+
+{% block package_basic_fields_description %}
+
+{{ 
+    form.markdown('notes', 
+        id = 'field-notes', 
+        label = _('Description'), 
+        placeholder = _('eg. Some useful notes about the data'), 
+        value = data.notes, 
+        error = errors.notes
+    )        
+}}
+
+{% endblock %} {# package_basic_fields_description #}
+
+{% block package_basic_fields_tags %}
+
+{% set tag_attrs = {'data-module': 'autocomplete', 'data-module-tags': '', 'data-module-source': '/api/2/util/tag/autocomplete?incomplete=?'} %}
+
+{{ 
+    form.input('tag_string', 
+        id = 'field-tags', 
+        label = _('Tags'), 
+        placeholder = _('eg. economy, mental health, government'), 
+        value = data.tag_string, 
+        error = errors.tags, 
+        classes = ['control-full'], 
+        attrs = tag_attrs) 
+}}
 
 {% endblock %}
 
-{#
+{% block package_basic_fields_license %}
 
-Override the default widget provided for selecting an organization
+<div class="control-group">
+  {% set error = errors.license_id %}
+  <label class="control-label" for="field-license">{{ _("License") }}</label>
+  <div class="controls">
+    <select id="field-license" name="license_id" data-module="autocomplete" class="input-xlarge">
+      {% for license_desc, license_id in licenses|sort if license_desc  %}
+        <option value="{{ license_id }}" {% if data.get('license_id', 'notspecified') == license_id %}selected="selected"{% endif %}>{{ license_desc }}</option>
+      {% endfor %}
+    </select>
+    {% if error %}<span class="error-block">{{ error }}</span>{% endif %}
+    
+    <span class="info-block info-inline">
+      {#<i class="icon-info-sign"></i>#}
+      {% trans %}License definitions at <a href="http://opendefinition.org/licenses/">opendefinition.org</a>{% endtrans %}
+    </span>
+    
+  </div>
+</div>
 
-#}
+{% endblock %}
 
 {% block package_basic_fields_org %}
 
+{# if we have a default group then this wants remembering #}
 {% if data.group_id %}
 <input type="hidden" name="groups__0__id" value="{{ data.group_id }}" />
 {% endif %}
 
 {% set existing_org = data.owner_org or data.group_id %}
-{% if h.check_access('sysadmin') or data.get('state', 'draft').startswith('draft') or data.get('state', 'none') ==  'none' %}
-{% set organizations_available      = h.organizations_available('create_dataset') %}
-{% set organizations_available_objs = h.organization_dict_objects(organizations_available) %}
-{% if organizations_available %}
+{% if h.check_access('sysadmin') or is_new or is_draft %}
+{% set orgs_available = h.organizations_available('create_dataset') %}
+{% set orgs_available_objs = h.organization_dict_objects(orgs_available) %}
+{% if orgs_available %}
 <div class="control-group">
     <label for="field-organizations" class="control-label">{{ _('Organization') }}</label>
     <div class="controls">
         <select id="field-organizations" name="owner_org" data-module="autocomplete" class="input-xlarge">
             <option value="" {% if not selected_org and data.id %} selected="selected" {% endif %}>{{ _('Select an organization...') }}</option>
-            {% for org in organizations_available %}
+            {% for org in orgs_available %}
             {# Select the 1st org from users list only if there is not an existing org #}
-            {% set selected_org = (existing_org and existing_org == org.id) or (not existing_org and not data.id and org.id == organizations_available[0].id) %}
-            {% set org_obj = organizations_available_objs.get(org.name) %}
+            {% set selected_org = (existing_org and existing_org == org.id) or (not existing_org and not data.id and org.id == orgs_available[0].id) %}
+            {% set org_obj = orgs_available_objs.get(org.name) %}
                 <option value="{{ org.id }}" {% if selected_org %} selected="selected" {% endif %}>{{ org_obj.get('display_name') }}</option>
             {% endfor %}
         </select>
@@ -56,9 +151,14 @@ Override the default widget provided for selecting an organization
 
 {#
 <script type="text/javascript">
-var organizations_available = {{ h.dump_json(organizations_available)|safe }};
-var organizations_available_objs = {{ h.dump_json(organizations_available_objs)|safe }};
+var orgs_available = {{ h.dump_json(orgs_available)|safe }};
+var orgs_available_objs = {{ h.dump_json(orgs_available_objs)|safe }};
 </script>
 #}
 
 {% endblock %}
+
+{% resource 'ckanext-publicamundi/styles' %}
+
+{% resource 'ckanext-publicamundi/scripts' %}
+
