--- a/ckanext/publicamundi/templates/package/snippets/fields/edit-datetime.html
+++ b/ckanext/publicamundi/templates/package/snippets/fields/edit-datetime.html
@@ -13,7 +13,7 @@
             data-module-picktime="true" data-module-pickdate="true" data-module-format="yyyy-MM-dd hh:mm:ss"
              >
             <input type="text" id="{{ 'input-' ~ qname }}"  name="{{ qname }}"
-                class={{ input_classes | list | join(" ") }}
+                class="{{ input_classes | list | join(" ") }}"
                 value="{{ value | empty_and_escape }}" 
                 placeholder="{{ placeholder | empty_and_escape }}"
             />
